--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,25 @@ jobs:
         with:
           node-version: 12
 
+#      - name: Build client
+#        run: |
+#          cd client
+#          npm ci
+#          npm run build
+#        env:
+#          CI: false # code contains lots of warnings, avoid treating them as errors by unsetting CI flag
+
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    if: startsWith(github.ref, 'refs/tags')
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+
       - name: Build client
         run: |
           cd client
